--- a/assets/view/gallery.html
+++ b/assets/view/gallery.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-straight/css/uicons-bold-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <script defer src="/assets/js/main.js"></script>
     <title>La Ferme Rose - Hôtel de charme à Moustier-Sainte-Marie</title>
@@ -45,19 +46,90 @@
             <h1>Gallerie</h1>
         </div>
         <article class="navigation">
-            <ul class="nav-list">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <nav>
+                <ul class="nav-list">
+                    <li><a href="">Hôtel</a></li>
+                    <li><a href="">Chambres</a></li>
+                    <li><a href="">Bar & Salon</a></li>
+                    <li><a href="">La collection de Kako</a></li>
+                    <li><a href="">Kako bistrot</a></li>
+                    <li><a href="">Kako beach</a></li>
+                    <li><a href="">Tout</a></li>
+                </ul>
+            </nav>
         </article>
         <section class="section-gallery">
-
+            <div class="image-gallery">
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-1.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-1.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-3.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-3.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-6.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-6.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-7.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-7.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-8.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-8.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/batiment-9.jpg" class="img-responsive">
+                    <a href="/assets/img/hotel/batiment-9.jpg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                    
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/hotel-1.jpeg" class="img-responsive">
+                    <a href="/assets/img/hotel/hotel-1.jpeg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
+                    <a href="/assets/img/hotel/hotel-2.jpeg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="img-wrapper">
+                    <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
+                    <a href="/assets/img/hotel/hotel-3.jpeg" class="img-overlay">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </a>
+                </div>
+                <div class="overlay">
+                    <div class="prevButton">
+                        <i class="fi fi-bs-angle-left"></i>
+                    </div>
+                    <img src="/assets/img/chamande1.jpg" class="overlay-content">
+                    <div class="caption"></div>
+                    <div class="nextButton">
+                        <i class="fi fi-bs-angle-right"></i>
+                    </div>
+                    <div class="close-btn">
+                        <i class="bi bi-x"></i>
+                    </div>
+                </div>
+            </div>
         </section>
     </main> 
     <!-- <div class="logo-area">
