--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1442,7 +1442,7 @@ nav a:hover, a:focus-visible {
      object-fit: cover;
 }
 
-.img-overlay {
+.overlay-filter {
   background: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
@@ -1458,15 +1458,16 @@ nav a:hover, a:focus-visible {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
   opacity: 0;
 }
 
-.img-overlay i {
+.overlay-filter i {
   color: #fff;
   font-size: 3em;
 }
 
-.img-overlay:hover {
+.overlay-filter:hover {
   opacity: 1;
 }
 
@@ -1482,9 +1483,7 @@ nav a:hover, a:focus-visible {
 }
 
 .overlay {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   /* Hidden by default */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
