--- a/assets/view/gallery.html
+++ b/assets/view/gallery.html
@@ -61,66 +61,83 @@
         <section class="section-gallery">
             <div class="image-gallery">
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/batiment-1.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-1.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/batiment-1.jpg" id="#photo">
+                        <img src="/assets/img/hotel/batiment-1.jpg" class="img-responsive" alt="facade de l'hôtel">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/batiment-3.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-3.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/batiment-3.jpg">
+                        <img src="/assets/img/hotel/batiment-3.jpg" class="img-responsive" alt="facade de l'hôtel">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/batiment-6.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-6.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/batiment-6.jpg">
+                        <img src="/assets/img/hotel/batiment-6.jpg" class="img-responsive" alt="facade de l'hôtel">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/batiment-7.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-7.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/batiment-7.jpg">
+                        <img src="/assets/img/hotel/batiment-7.jpg" class="img-responsive">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/batiment-8.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-8.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/batiment-8.jpg">
+                        <img src="/assets/img/hotel/batiment-8.jpg" class="img-responsive">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
+                    <a href="/assets/img/hotel/batiment-9.jpg">
                     <img src="/assets/img/hotel/batiment-9.jpg" class="img-responsive">
-                    <a href="/assets/img/hotel/batiment-9.jpg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
                     </a>
-                    
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/hotel-1.jpeg" class="img-responsive">
-                    <a href="/assets/img/hotel/hotel-1.jpeg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/hotel-1.jpeg">
+                        <img src="/assets/img/hotel/hotel-1.jpeg" class="img-responsive">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
-                    <a href="/assets/img/hotel/hotel-2.jpeg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/hotel-2.jpeg">
+                        <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="img-wrapper">
-                    <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
-                    <a href="/assets/img/hotel/hotel-3.jpeg" class="img-overlay">
-                        <i class="bi bi-plus-circle-fill"></i>
+                    <a href="/assets/img/hotel/hotel-3.jpeg">
+                        <img src="/assets/img/hotel/hotel-2.jpeg" class="img-responsive">
                     </a>
+                    <div class="overlay-filter">
+                        <i class="bi bi-plus-circle-fill"></i>
+                    </div>
                 </div>
                 <div class="overlay">
                     <div class="prevButton">
                         <i class="fi fi-bs-angle-left"></i>
                     </div>
-                    <img src="/assets/img/chamande1.jpg" class="overlay-content">
+                    <img src="" class="overlay-content">
                     <div class="caption"></div>
                     <div class="nextButton">
                         <i class="fi fi-bs-angle-right"></i>
