--- a/scss/pages/_gallery.scss
+++ b/scss/pages/_gallery.scss
@@ -109,7 +109,7 @@ nav a:hover, a:focus-visible {
     }
 }
 
-.img-overlay {
+.overlay-filter {
     background: rgba(0,0,0,0.7);
     width: 100%;
     height: 100%;
@@ -119,6 +119,7 @@ nav a:hover, a:focus-visible {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
     opacity: 0;
     i {
     color: #fff;
@@ -143,12 +144,12 @@ nav a:hover, a:focus-visible {
   //overlay
 
   .overlay {
-    display: flex; /* Hidden by default */
+    display: none; /* Hidden by default */
     justify-content: center;
     align-items: center;
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    // padding-top: 100px; /* Location of the box */
+    
     left: 0;
     top: 0;
     width: 100%; /* Full width */
