--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1433,6 +1433,7 @@ nav a:hover, a:focus-visible {
   height: 25rem;
   margin-top: 1rem;
   position: relative;
+  cursor: pointer;
 }
 
 .img-wrapper img {
@@ -1440,35 +1441,6 @@ nav a:hover, a:focus-visible {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-}
-
-.overlay-filter {
-  background: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.overlay-filter i {
-  color: #fff;
-  font-size: 3em;
-}
-
-.overlay-filter:hover {
-  opacity: 1;
 }
 
 #caption {
@@ -1482,8 +1454,10 @@ nav a:hover, a:focus-visible {
   height: 150px;
 }
 
-.overlay {
-  display: none;
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   /* Hidden by default */
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -1495,8 +1469,8 @@ nav a:hover, a:focus-visible {
   /* Stay in place */
   z-index: 1;
   /* Sit on top */
-  left: 0;
   top: 0;
+  right: 0;
   width: 100%;
   /* Full width */
   height: 100%;
@@ -1507,22 +1481,8 @@ nav a:hover, a:focus-visible {
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.9);
   /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.overlay-content {
-  margin: 0 2rem;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.overlay-content, .caption {
-  -webkit-animation-name: zoom;
-          animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-          animation-duration: 0.6s;
+  -webkit-animation: zoom 0.3s ease-in-out;
+          animation: zoom 0.3s ease-in-out;
 }
 
 @-webkit-keyframes zoom {
@@ -1547,16 +1507,32 @@ nav a:hover, a:focus-visible {
   }
 }
 
+/* Modal Content (Image) */
+.modal img {
+  width: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /* The Close Button */
-.close-btn {
+.closeBtn {
   position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
+  top: 2rem;
+  right: 2rem;
+  color: rgba(241, 241, 241, 0.87);
   font-size: 2.5rem;
   font-weight: bold;
+  z-index: 90;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.closeBtn:hover {
+  color: #f1f1f1;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+  scale: 1.5;
 }
 
 .prevButton, .nextButton {
