--- a/scss/pages/_gallery.scss
+++ b/scss/pages/_gallery.scss
@@ -102,33 +102,35 @@ nav a:hover, a:focus-visible {
     height: 25rem;
     margin-top: 1rem;
     position: relative;
+    cursor: pointer;
+    
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 }
-
-.overlay-filter {
-    background: rgba(0,0,0,0.7);
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: 0;
-    i {
-    color: #fff;
-    font-size: 3em;
-    }
-    &:hover{
-        opacity: 1;
-    }
-}
+//incase if i need to add a filter
+// .overlay-filter {
+//     background: rgba(0,0,0,0.7);
+//     width: 100%;
+//     height: 100%;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     cursor: pointer;
+//     opacity: 0;
+//     i {
+//     color: #fff;
+//     font-size: 3em;
+//     }
+//     &:hover{
+//         opacity: 1;
+//     }
+// }
 
 #caption {
     margin: auto;
@@ -143,50 +145,54 @@ nav a:hover, a:focus-visible {
 
   //overlay
 
-  .overlay {
-    display: none; /* Hidden by default */
+  .modal {
+    display: flex; /* Hidden by default */
     justify-content: center;
     align-items: center;
+
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     
-    left: 0;
     top: 0;
+    right: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-  }
   
-  /* Modal Content (Image) */
-  .overlay-content {
-    margin: 0 2rem;
-    display: block;
-    width: 80%;
-    max-width: 700px;
+    animation: zoom 0.3s ease-in-out;
   }
-  
-  /* Add Animation - Zoom in the Modal */
-  .overlay-content, .caption {
-    animation-name: zoom;
-    animation-duration: 0.6s;
-  }
-  
-  @keyframes zoom {
+
+   @keyframes zoom {
+
     from {transform:scale(0)}
+
     to {transform:scale(1)}
   }
-  
+
+  /* Modal Content (Image) */
+  .modal img {
+    width: 50%;
+    object-fit: cover;
+  }
+   
   /* The Close Button */
-  .close-btn {
+  .closeBtn {
     position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
+    top: 2rem;
+    right: 2rem;
+    color: rgba(241, 241, 241, 0.87);
     font-size: 2.5rem;
     font-weight: bold;
-    transition: 0.3s;
+    z-index: 90;
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+    &:hover{
+        color:  rgb(241, 241, 241);
+        transition: 0.3s;
+        scale: 1.5;
+    }
   }
 
   .prevButton, .nextButton {
