--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -74,6 +74,10 @@
     // transform: translateY(-50%);
 }
 
+.carousel__nav.nav-bistrot {
+    display: none;
+}
+
 .carousel__indicator{
     border: 0;
     border-radius: 50%;
