--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import 'pages/room';
 @import 'pages/preview';
 @import 'pages/gallery';
+@import 'pages/bistrot';
 @import 'components/card';
 @import 'components/button';
 @import 'components/carousel';
