--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600&family=Lato:wght@100;300;400;700&display=swap");
-.about, .about-two, .logo-area, .room, .about-view, .room-detail, .room-photo-gallery, .suggestion, .navigation, .section-gallery {
+.about, .about-two, .room, .about-view, .room-detail, .room-photo-gallery, .suggestion, .navigation, .section-gallery, .about-bistrot, .bistrot-gallery, .bistrot-story {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -139,6 +139,28 @@ header {
   background: transparent;
 }
 
+header:hover {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+header:hover .btn.btn-header {
+  border-color: #020202;
+  color: #020202;
+}
+
+header:hover .btn.btn-header:hover {
+  background-color: #020202;
+  color: #fbf6ef;
+}
+
+header:hover .line {
+  background-color: #020202;
+}
+
+header:hover .logo-name {
+  color: #020202;
+}
+
 .logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -171,8 +193,8 @@ header {
 }
 
 .logo:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .menu {
@@ -652,95 +674,6 @@ header {
   height: 100%;
   top: 0;
   right: 0;
-}
-
-.contact-content {
-  width: 20vw;
-  padding: 3rem 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: rgba(255, 255, 255, 0.329);
-  -webkit-backdrop-filter: blur(1rem);
-          backdrop-filter: blur(1rem);
-  z-index: 990;
-  border-radius: 5px;
-  color: #020202;
-}
-
-.contact-content h2 {
-  font-size: 2rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-}
-
-.contact-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: start;
-  width: 70%;
-  margin-top: 2rem;
-}
-
-.contact-form label {
-  font-family: "Tinos", serif;
-  font-size: 1rem;
-  font-weight: 400;
-  color: #020202;
-  margin-bottom: 0.8rem;
-}
-
-.contact-form input, .contact-form textarea {
-  border: none;
-  border-bottom: 1px solid grey;
-  outline: none;
-  background-color: transparent;
-  height: 3rem;
-  width: 15rem;
-  margin-bottom: 1rem;
-  font-size: 1rem;
-}
-
-.contact-form ::-webkit-input-placeholder {
-  font-family: "Tinos", serif;
-  color: grey;
-  font-weight: 300;
-}
-
-.contact-form :-ms-input-placeholder {
-  font-family: "Tinos", serif;
-  color: grey;
-  font-weight: 300;
-}
-
-.contact-form ::-ms-input-placeholder {
-  font-family: "Tinos", serif;
-  color: grey;
-  font-weight: 300;
-}
-
-.contact-form ::placeholder {
-  font-family: "Tinos", serif;
-  color: grey;
-  font-weight: 300;
-}
-
-input:focus, textarea:focus {
-  color: #fbf6ef;
 }
 
 @media (max-width: 1200px) {
@@ -1557,6 +1490,114 @@ nav a:hover, a:focus-visible {
   }
 }
 
+.hero-bistrot {
+  min-height: 70vh;
+  background-image: url(/assets/img/facade2.jpg);
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.about-bistrot {
+  padding: 4rem;
+  min-height: 30vh;
+  background-color: #f5efeb;
+  font-family: "Tinos", serif;
+}
+
+.about-content-bistrot {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 70vw;
+}
+
+.about-content-bistrot h2 {
+  font-size: 2rem;
+}
+
+.about-content-bistrot p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #020202;
+  margin: 1.2rem 0;
+  text-align: center;
+}
+
+.about-content-bistrot .btn {
+  margin-top: 1rem;
+}
+
+.bistrot-gallery {
+  padding: 2rem;
+  background-color: #f5efeb;
+}
+
+.bistrot-carousel {
+  height: 60vh;
+  width: 70vw;
+}
+
+.bistrot-story {
+  min-height: 50vh;
+  padding: 5rem;
+  background-color: #f5efeb;
+}
+
+.story-wrapper {
+  height: 40vh;
+  width: 80vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15rem;
+}
+
+.story-col {
+  width: 35%;
+}
+
+.left-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
+
+.left-col h3 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.left-col p {
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+
+.story-carousel {
+  height: 30rem;
+}
+
 .card {
   border-radius: double(10)px;
   -webkit-box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.459);
@@ -1611,7 +1652,8 @@ nav a:hover, a:focus-visible {
 }
 
 .btn:hover {
-  background-color: #fafafa;
+  color: #fbf6ef;
+  background-color: #020202;
 }
 
 .btn.btn-header {
@@ -1619,11 +1661,6 @@ nav a:hover, a:focus-visible {
   color: #fbf6ef;
   -webkit-transition: 300ms ease-in;
   transition: 300ms ease-in;
-}
-
-.btn.btn-header:hover {
-  background-color: #fafafa;
-  color: #020202;
 }
 
 .btn.btn-info {
@@ -1778,6 +1815,10 @@ nav a:hover, a:focus-visible {
   position: absolute;
   bottom: 0;
   left: 40%;
+}
+
+.carousel__nav.nav-bistrot {
+  display: none;
 }
 
 .carousel__indicator {
