--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,6 +10,28 @@ header{
     top: 0;
     z-index: 1;
     background: transparent;
+    &:hover {
+        background: rgba(255,255,255, .8);
+        //button color changes to black
+        .btn.btn-header {
+        border-color: $main-txt-dark;
+        color: $main-txt-dark;
+        }
+        .btn.btn-header:hover {
+            background-color: $main-txt-dark;
+            color: $main-txt-light;
+        }
+
+        // burger > span ('.line') color changes to black
+        .line {
+        background-color: $main-txt-dark;
+        }
+        // logo name color changes to black
+        .logo-name{
+            color: $main-txt-dark;
+        }
+
+    }
 
    
 }
@@ -38,7 +60,7 @@ header{
     }
     
     &:hover{
-        transform: scale(1.3);
+        transform: scale(1.1);
     }
 }
 
